Changes since labca_2_1_beta (T.S):
	2007/4/10 (Jim Sebek):
	- attempts to mcc-compile matlab scripts that use labCA had failed
	  apparently because the help (.m) files are in the same directory
	  as the respective mex object files.
	  Jim found a work-around that tests if a compilation is in progress
	  and which skips labca initialization if this is the case.
	2006/12/19 (TS):
	- mexLock() glue and CA libraries so that EPICS is not shut down
      as a result of matlab 'clear' operations [epics shutdown -> exit()].
	2006/9/1 (TS):
	- ezcaLong is really 32bit, i.e., I fixed multiEzca.c to use 'int'
	  instead of 'long' which is correct on 32bit and 64bit platforms.

Changes since labca_2_0_alpha (T.S):
    2006/4/14 (TS):
    - scilab now also uses polled 'ctrlC' handling (undocumented
      'isbrk() and inibrk()' routines.
    - changed shutdown procedure. This is still a pain and I don't
      understand exactly what needs to be done to avoid crashing
      the app on exit. Current solution seems to work on all
      platforms for both scilab and matlab.
    2006/4/11 (TS):
    - upgraded to 3.14(.8.2)-style Makefiles.
    2006/4/10 (TS):
    - ezcaEndGroupWithReport() used to clear out unconnected channels
      assuming that the disconnected state was a result of a failing
      search_and_connect(). We now clear only channels that never were
      successfully connected and leave other ones alone. This allows
      monitors to pick up seamlessly after IOC reboots.
    - disallow implicit mapping of native type -> FLOAT for monitors.
      (The old behavior let disconnected channels look for a FLOAT
      type monitor. We now let lcaNewMonitorValue() report -10 if
      asking for the native type of a disconnected channel).
    2006/2/17 (TS):
    - we now use (undocumented) MATLAB 'utHandlePendingInterrupt()' to poll
      for pending 'Ctrl-C' rather than hacking into the windows event loop.
      Our hack didn't work with matlab 7.2(?)/win32 anymore.